--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angularclass/conventions-loader": "1.0.13",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "3.0.2",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^2.0.0",
+    "@ngrx/store": "^2.2.1",
     "amcharts3": "github:amcharts/amcharts3",
     "ammap3": "github:amcharts/ammap3",
     "animate.css": "3.5.2",
@@ -32,6 +35,7 @@
     "google-maps": "3.2.1",
     "http-server": "0.9.0",
     "ie-shim": "0.1.0",
+    "immutable": "^3.8.1",
     "ionicons": "2.0.1",
     "is-electron-renderer": "2.0.1",
     "jquery": "2.2.4",
@@ -47,11 +51,13 @@
     "ngx-uploader": "2.2.0",
     "normalize.css": "4.2.0",
     "reflect-metadata": "0.1.9",
+    "reselect": "^2.5.4",
     "rxjs": "5.1.1",
     "tether": "1.4.0",
     "zone.js": "0.7.7"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "2.4.9",
     "@types/electron": "1.4.32",
     "@types/fullcalendar": "2.7.37",
@@ -63,10 +69,8 @@
     "@types/source-map": "0.5.0",
     "@types/uglify-js": "2.6.28",
     "@types/webpack": "2.2.5",
-    "@ngrx/core": "1.2.0",
-    "@ngrx/effects": "2.0.0",
-    "@ngrx/store": "2.2.1",
     "@ngrx/store-devtools": "3.2.2",
+	"ngrx-store-freeze": "^0.1.9",
     "add-asset-html-webpack-plugin": "1.0.2",
     "angular2-template-loader": "0.6.0",
     "assets-webpack-plugin": "3.5.1",
@@ -89,12 +93,22 @@
     "html-webpack-plugin": "2.28.0",
     "imports-loader": "0.7.0",
     "json-loader": "0.5.4",
+    "jasmine-core": "~2.5.2",
+    "jasmine-spec-reporter": "~3.2.0",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "ng-router-loader": "2.1.0",
     "ngc-webpack": "1.2.0",
     "node-sass": "4.5.0",
     "npm-run-all": "4.0.1",
     "optimize-js-plugin": "0.0.4",
     "postcss-loader": "1.3.1",
+    "protractor": "~5.1.0",
     "raw-loader": "0.5.1",
     "resolve-url-loader": "1.6.1",
     "rimraf": "2.5.4",
