--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
-    "karma-phantomjs-launcher": "1.0.2",
+    "karma-phantomjs-launcher": "1.0.4",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
@@ -109,6 +109,7 @@
     "optimize-js-plugin": "0.0.4",
     "postcss-loader": "1.3.1",
     "protractor": "~5.1.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "0.5.1",
     "resolve-url-loader": "1.6.1",
     "rimraf": "2.5.4",
