--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
   "devDependencies": {
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "2.4.9",
+    "@ngrx/store-devtools": "3.2.2",
     "@types/electron": "1.4.32",
     "@types/fullcalendar": "2.7.37",
     "@types/hammerjs": "2.0.34",
+    "@types/jasmine": "^2.5.47",
     "@types/jquery ": "2.0.40",
     "@types/jquery.slimscroll": "1.3.30",
     "@types/lodash": "ts2.0",
@@ -69,8 +71,6 @@
     "@types/source-map": "0.5.0",
     "@types/uglify-js": "2.6.28",
     "@types/webpack": "2.2.5",
-    "@ngrx/store-devtools": "3.2.2",
-	"ngrx-store-freeze": "^0.1.9",
     "add-asset-html-webpack-plugin": "1.0.2",
     "angular2-template-loader": "0.6.0",
     "assets-webpack-plugin": "3.5.1",
@@ -92,24 +92,25 @@
     "gh-pages": "0.12.0",
     "html-webpack-plugin": "2.28.0",
     "imports-loader": "0.7.0",
-    "json-loader": "0.5.4",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
+    "json-loader": "0.5.4",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
-    "karma-phantomjs-launcher": "1.0.4",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "1.0.4",
     "ng-router-loader": "2.1.0",
     "ngc-webpack": "1.2.0",
+    "ngrx-store-freeze": "^0.1.9",
     "node-sass": "4.5.0",
     "npm-run-all": "4.0.1",
     "optimize-js-plugin": "0.0.4",
+    "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "1.3.1",
     "protractor": "~5.1.0",
-    "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "0.5.1",
     "resolve-url-loader": "1.6.1",
     "rimraf": "2.5.4",
